# solaris

./: .gitignore  README.md  environment.yaml  modal_train.py  pyproject.toml  requirements-modal.txt  requirements.txt
notebooks/: f107_plot.ipynb
scripts/: generate_aia_synoptic_urls.py  how_to_download_aia_synoptic_data.md  process_aia_synoptic_files.py  upload_to_huggingface.py  wavelength_statistics.csv
solaris/: __init__.py  clean_data.py  download_data.py  downstreamtask_metric.py  f107.py  load_data.py  missing_channel.py  normalization.py  train.py  utils_data.py
solaris/downstream_tasks/: solaris_f107.py
solaris/model/: decoder.py  encoder.py  fourier.py  patchembed.py  perceiver.py  posencoding.py  solaris.py  swin3d.py  util.py
